# lightrag-subgraph-svelte

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/src/: main.py
backend/src/api/: routes.py  websocket.py
backend/src/core/: config.py  graph_manager.py  lightrag_wrapper.py
backend/src/models/: schemas.py
backend/src/utils/: helpers.py
docs/: README.md  backend.md  concept.md  frontend.md  operations.md
frontend/: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: app.css  app.html
frontend/src/lib/components/: ChatPanel.svelte  DocumentUpload.svelte  GraphPanel.svelte  GraphStats.svelte  ViewToggle.svelte
frontend/src/lib/graph/: d3-graph.js
frontend/src/lib/stores/: app.js
frontend/src/lib/utils/: api.js
frontend/src/routes/: +layout.svelte  +page.svelte
scripts/: setup.sh
